--- a/src/style/carrusel.css
+++ b/src/style/carrusel.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Literata&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&display=swap");
+
 
 .main-container {
   position: relative;
@@ -6,7 +7,7 @@
   width: 100%;
   height: 95vh;
   overflow: hidden;
-  padding-top: 2rem;
+  padding-top: 5rem;
   padding-bottom: 5rem;
   border-bottom-right-radius: min(50vw, 25rem);
   color: white;
@@ -15,7 +16,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: "Literata", serif;
 }
 
 .background-layer {
@@ -104,20 +104,19 @@
 }
 
 .content h1 {
-  font-size: 3rem;
-  font-weight: 700;
+  font-size: 4rem;
+  font-weight: 400;
   line-height: 1.1;
   margin: 0;
   color: white;
-  text-align: center;
-  font-style: italic;
+  font-family: "Literata" !important;
 }
 
 .subtitle {
-  font-size: 3rem;
-  font-weight: 700;
+    font-family: "Archivo", !important;  
+  font-weight: 700 !important;                
+  font-size: 4rem !important;                  
   line-height: 1.1;
-  color: white;
   margin-top: 0.5rem;
 }
 
@@ -137,7 +136,7 @@
   display: inline-block;
   text-transform: uppercase;
   color: var(--color-celeste);
-  padding: 0.75rem 1.75rem;
+  padding: 1rem 2rem;
   border-radius: 9999px; /* pill shape */
   font-weight: 700;
   letter-spacing: 0.05em;
@@ -149,7 +148,6 @@
 
 .content a:hover,
 .content a:focus {
-  background-color: #555;
   outline: none;
 }
 
