--- a/src/components/navbar/navbarlight.astro
+++ b/src/components/navbar/navbarlight.astro
@@ -10,7 +10,7 @@ const menuitems = [
   },
   {
     title: "Servicios",
-    path: "/#servicios",
+    path: "/servicios",
   },
   {
     title: "Inicio",
@@ -43,7 +43,10 @@ const menuitems = [
   li:hover{
     opacity: 0.5;
   }
-  
+  div{
+    z-index: 500;
+  }
+
 </style>
 
 <header class="flex flex-col lg:flex-row justify-center items-center mt-8 mb-5">
