--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -24,6 +24,13 @@ import aboutData from "../../public/data/about.json"; // Importa el archivo JSON
     width: 250px;
   }
 
+  h2{
+    font-family: "Literata", serif;
+    font-size: 2.5rem;
+    font-weight: 400;
+    padding-bottom: 4vh; 
+  }
+
   #about p {
   text-align: justify;
 }
