--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -50,7 +50,7 @@ const socials = [
   }
 </style>
 
-<footer class="mt-20 p-20 flex flex-col md:flex-row md:items-end gap-5 lg:gap-20">
+<footer class="mt-20 p-20 mt-0 flex flex-col md:flex-row md:items-end gap-5 lg:gap-20">
   <div class="grid gap-5 text-white lg:ms-20">
     <Image
       src={logoFullWhite}
