--- a/src/pages/novedades.astro
+++ b/src/pages/novedades.astro
@@ -17,6 +17,17 @@ const image = "/opengraph.jpg";  // Asegúrate de tener una imagen representativ
 const openGraphImage = new URL(image, Astro.site).toString();
 ---
 
+<style>
+  * {
+    font-family: "Archivo", sans-serif;
+  }
+  
+  h1, h2, h3 {
+    font-family: "Literata", serif;
+  }
+</style>
+
+
 <SEO
   title={title}
   description={description}
@@ -39,7 +50,7 @@ const openGraphImage = new URL(image, Astro.site).toString();
 
   <!-- Contenedor principal -->
   <div class="w-full mt-10">
-    <h1 class="text-4xl font-bold text-center mb-6">Listado de Novedades</h1>
+    <h1 class="text-4xl font-bold text-center mb-6 lg:text-5xl lg:tracking-tight mt-1 lg:leading-tight pb-5">Listado de Novedades</h1>
     <Container>
       <!-- Iterar sobre las novedades -->
       {novedades.map((novedad, index) => {
