--- a/src/pages/publicaciones.astro
+++ b/src/pages/publicaciones.astro
@@ -45,7 +45,7 @@ const canonicalURL = "https://chestudioabogados.com/publicaciones"; // Enlace ca
   
   <Container>
     <div class="mx-auto max-w-3xl mt-14 text-center">
-      <h1 class="text-4xl lg:text-5xl font-bold lg:tracking-tight mt-1 lg:leading-tight">
+      <h1 class="text-4xl lg:text-5xl font-bold lg:tracking-tight mt-1 lg:leading-tight pb-5">
         Artículos y comentarios publicados
       </h1>
       <p class="text-lg text-gray-600 mt-2">Acá podés encontrar nuestros artículos y comentarios publicados, donde acordamos las últimas tendencias, novedades legales y temas relevantes en el ámbito del derecho tecnológico y digital</p>
