--- a/src/style/carrusel.css
+++ b/src/style/carrusel.css
@@ -26,6 +26,8 @@
   background-size: cover;
   transition: opacity 0.8s ease-in-out;
   border-bottom-right-radius: inherit;
+  z-index: 1;
+
 }
 
 #bg-prev {
@@ -201,4 +203,29 @@
 
 .slide-in {
   animation: slideInRight 0.5s forwards;
+}
+
+
+@media (max-width: 768px) {
+  .content h1 {
+    font-size: 3rem;   /* antes 4rem */
+    line-height: 1.2;
+  }
+
+  .subtitle {
+    font-size: 2.5rem !important; /* antes 4rem */
+    line-height: 1.2;
+  }
+
+  .content p {
+    font-size: 1rem;
+  }
+
+  .content a {
+    margin-top: 3rem; /* menos espacio en mobile */
+    padding: 0.75rem 1.5rem;
+    font-size: 0.9rem;
+  }
+
+ 
 }
